[package]
name = "rustools"
version = "0.2.5"
authors = ["aberic <100309595@qq.com>"]
license = "Apache-2.0"
description = "Common tool library"
repository = "https://github.com/aberic/rustools"
readme = "../README.md"
keywords = ["common"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
log4rs = "1"
openssl = { version = "0", features = ["vendored"] }
openssl-sys = "0"
phf = { version = "0", features = ["macros"] }
phf_macros = "0"
chrono = "0"
serde = "1"
serde_yaml = "0"
serde_json = "1"
lazy_static = "1"
crc = "2"
hex = "0"
libsm = { git = "https://github.com/citahub/libsm", version = "0" }
rand = "0.8"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tonic = "0"
futures-util = { version = "0", default-features = false }
async-stream = "0"
# Cupcake = "0" # homomorphic
# concrete = { version = "0.1.11", features = ["stdsimd"] } # homomorphic
crossbeam = "0"
num_cpus = "1"
flate2 = "1"
once_cell = "1"
#rustls = "0.19"

# paillier = "0.2.0"
# paillier = { git = "https://github.com/KZen-networks/rust-paillier", version = "0.3.10" }
# zk-paillier = { git = "https://github.com/ZenGo-X/zk-paillier", version = "0.3.12" }